--- a/basics-app/src/app/app.component.html
+++ b/basics-app/src/app/app.component.html
@@ -1,2 +1,12 @@
-<h1>I'm in the app component!</h1>
-<app-servers></app-servers>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>I'm in the app component!</h1>
+      <hr />
+      <app-servers></app-servers>
+      <!--<div app-servers></div>-->
+      <!--<div class="app-servers"></div>-->
+    </div>
+  </div>
+</div>
+
