--- a/basics-app/src/app/servers/servers.component.html
+++ b/basics-app/src/app/servers/servers.component.html
@@ -1,4 +1,16 @@
-<button class="btn btn-primary" [disabled]="!allowNewServer">Add Server</button>
+<label for="name">Server Name</label>
+<input id="name" type="text" (input)="onUpdateServerName($event)"/>
+
+
+<button class="btn btn-primary"
+        [disabled]="!allowNewServer"
+        (click)="onCreateServer()">
+  Add Server
+</button>
+
+<p>
+  {{serverCreationStatus}}
+</p>
 
 <app-server></app-server>
 <app-server></app-server>
