Combining event binding with two-way binding

--- a/basics-app/src/app/servers/servers.component.html
+++ b/basics-app/src/app/servers/servers.component.html
@@ -1,5 +1,9 @@
+<!--<label for="name">Server Name</label>-->
+<!--<input id="name" type="text" (input)="onUpdateServerName($event)"/>-->
+
 <label for="name">Server Name</label>
-<input id="name" type="text" (input)="onUpdateServerName($event)"/>
+<input id="name" type="text" [(ngModel)]="serverName" />
+
 
 
 <button class="btn btn-primary"
