--- a/basics-app/src/app/server/server.component.html
+++ b/basics-app/src/app/server/server.component.html
@@ -1,1 +1,4 @@
-<p>Server with ID {{ serverId }} is {{ serverStatus }} (with method: {{ getServerStatus() }})</p>
+<p [ngStyle]="{backgroundColor: getColor()}"
+   [ngClass]="{online: serverStatus === 'online'}">
+  Server with ID {{ serverId }} is {{ serverStatus }} (with method: {{ getServerStatus() }})
+</p>
