--- a/basics-app/src/app/servers/servers.component.html
+++ b/basics-app/src/app/servers/servers.component.html
@@ -12,9 +12,22 @@
   Add Server
 </button>
 
-<p>
-  {{serverCreationStatus}}
+<p *ngIf="serverName">
+  Name is {{serverName}}
 </p>
 
-<app-server></app-server>
-<app-server></app-server>
+<p *ngIf="serverCreated; else noServer">
+  Server was created! Name is {{serverName}}
+</p>
+
+<ng-template #noServer>
+  <p>
+    No server was created!
+  </p>
+</ng-template>
+
+<!--<p>-->
+  <!--{{serverCreationStatus}}-->
+<!--</p>-->
+
+<app-server *ngFor="let server of servers"></app-server>
