--- a/course-project/src/app/app.component.html
+++ b/course-project/src/app/app.component.html
@@ -1,14 +1,8 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{title}}!
-  </h1>
+<app-header></app-header>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      Hello from course-project!
+    </div>
+  </div>
 </div>
-
-<label for="name">Name</label>
-<input id="name" type="text" [(ngModel)]="name" />
-
-<div>
-  Hello, {{name}}!
-</div>
-
