--- a/course-project/src/app/app.component.html
+++ b/course-project/src/app/app.component.html
@@ -2,7 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      Hello from course-project!
+      <app-recipes></app-recipes>
+      <app-shopping-list></app-shopping-list>
     </div>
   </div>
 </div>
