--- a/databindings-app/src/app/app.component.html
+++ b/databindings-app/src/app/app.component.html
@@ -6,6 +6,10 @@
             <app-server-element
                     *ngFor="let server of serverElements"
                     [serverElement]="server">
+                <p>
+                    <strong *ngIf="server.type === 'server'" style="color: red">{{ server.content }}</strong>
+                    <em *ngIf="server.type === 'blueprint'">{{ server.content }}</em>
+                </p>
             </app-server-element>
         </div>
     </div>
