--- a/databindings-app/src/app/app.component.html
+++ b/databindings-app/src/app/app.component.html
@@ -3,10 +3,13 @@
     <hr>
     <div class="row">
         <div class="col-xs-12">
+            <button (click)="onChangeFirstElement()">Change first element</button>
+            <button (click)="onRemoveFirstElement()">Remove first element</button>
             <app-server-element
                     *ngFor="let server of serverElements"
-                    [serverElement]="server">
-                <p>
+                    [serverElement]="server"
+                    [name]="server.name">
+                <p #contentParagraph>
                     <strong *ngIf="server.type === 'server'" style="color: red">{{ server.content }}</strong>
                     <em *ngIf="server.type === 'blueprint'">{{ server.content }}</em>
                 </p>
