--- a/course-project/src/app/header/header.component.html
+++ b/course-project/src/app/header/header.component.html
@@ -6,8 +6,8 @@
 
     <div class="navbar-default">
       <ul class="nav navbar-nav">
-        <li><a href="#">Recipes</a></li>
-        <li><a href="#">Shopping List</a></li>
+        <li><a href="#" (click)="onSelectRecipesMenuPosition()">Recipes</a></li>
+        <li><a href="#" (click)="onSelectShoppingMenuPosition()">Shopping List</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
