--- a/app-directives/src/app/app.component.html
+++ b/app-directives/src/app/app.component.html
@@ -3,13 +3,31 @@
     <div class="col-xs-12">
       <button
         class="btn btn-primary"
-        (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
+        (click)="onlyOdd = !onlyOdd">Only show odd numbers
+      </button>
       <br><br>
       <ul class="list-group">
-        <li
-          class="list-group-item">
+        <span *ngIf="onlyOdd">
+          <li class="list-group-item"
+              [ngClass]="{ odd: number % 2 !== 0 }"
+              *ngFor="let number of oddNumbers">
+            {{number}}
+          </li>
+        </span>
+        <span *ngIf="!onlyOdd">
+          <li class="list-group-item"
+              [ngClass]="{ even: number % 2 === 0 }"
+              *ngFor="let number of evenNumbers">
+          {{number}}
         </li>
+        </span>
       </ul>
+      <p appBasicHighlight>
+        Style me with basic directive
+      </p>
+      <p appBetterHighlight>
+        Style me with better directive
+      </p>
       <ng-template [ngIf]="onlyOdd">
         <p>Only odd</p>
       </ng-template>
