--- a/app-directives/src/app/app.component.html
+++ b/app-directives/src/app/app.component.html
@@ -14,23 +14,51 @@
             {{number}}
           </li>
         </span>
-        <span *ngIf="!onlyOdd">
+        <span *appUnless="onlyOdd">
           <li class="list-group-item"
               [ngClass]="{ even: number % 2 === 0 }"
               *ngFor="let number of evenNumbers">
           {{number}}
-        </li>
+          </li>
         </span>
+  
+        <!--<span *ngIf="!onlyOdd">-->
+          <!--<li class="list-group-item"-->
+              <!--[ngClass]="{ even: number % 2 === 0 }"-->
+              <!--*ngFor="let number of evenNumbers">-->
+          <!--{{number}}-->
+        <!--</li>-->
+        <!--</span>-->
+        <!---->
+        <!--<ng-template [ngIf]="!onlyOdd">-->
+          <!--<span>-->
+            <!--<li class="list-group-item"-->
+                <!--[ngClass]="{ even: number % 2 === 0 }"-->
+                <!--*ngFor="let number of evenNumbers">-->
+              <!--{{number}}-->
+            <!--</li>-->
+          <!--</span>-->
+        <!--</ng-template>-->
       </ul>
       <p appBasicHighlight>
         Style me with basic directive
       </p>
-      <p appBetterHighlight>
+      <p [appBetterHighlight]="'red'"
+         [defaultColor]="'lightyellow'">
         Style me with better directive
       </p>
-      <ng-template [ngIf]="onlyOdd">
-        <p>Only odd</p>
-      </ng-template>
+      
+      
+      <div [ngSwitch]="">
+        <p *ngSwitchCase="5">Value is 5</p>
+        <p *ngSwitchCase="10">Value is 10</p>
+        <p *ngSwitchCase="100">Value is 100</p>
+        <p *ngSwitchDefault>Value is default</p>
+      </div>
+      
+      <!--<ng-template [ngIf]="onlyOdd">-->
+        <!--<p>Only odd</p>-->
+      <!--</ng-template>-->
     </div>
   </div>
 </div>
