--- a/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -18,9 +18,9 @@
           Manage Recipe <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-          <li><a href="">To Shopping List</a></li>
-          <li><a href="">Edit Recipe</a></li>
-          <li><a href="">Delete Recipe</a></li>
+          <li><a href="#" (click)="addToShoppingList()">To Shopping List</a></li>
+          <li><a href="#">Edit Recipe</a></li>
+          <li><a href="#">Delete Recipe</a></li>
         </ul>
       </div>
     </div>
@@ -34,7 +34,12 @@
 
   <div class="row">
     <div class="col-xs-12">
-      Ingredients
+      <ul class="list-group">
+        <li class="list-group-item"
+            *ngFor="let ingredient of ingredients">
+          {{ ingredient.name }} - {{ ingredient.amount }}
+        </li>
+      </ul>
     </div>
   </div>
 
