--- a/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/course-project/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -36,7 +36,7 @@
     <div class="col-xs-12">
       <ul class="list-group">
         <li class="list-group-item"
-            *ngFor="let ingredient of ingredients">
+            *ngFor="let ingredient of recipe.ingredients">
           {{ ingredient.name }} - {{ ingredient.amount }}
         </li>
       </ul>
