Routing and Guards

--- a/app-routing/src/app/home/home.component.html
+++ b/app-routing/src/app/home/home.component.html
@@ -4,4 +4,9 @@
         (click)="onLoadServers(1)">
   Load servers
 </button>
-
+<button (click)="onLogin()">
+  Login
+</button>
+<button (click)="onLogout()">
+  Logout
+</button>
