--- a/app-forms-template/src/app/app.component.html
+++ b/app-forms-template/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form (ngSubmit)="onSubmit(form)" #form="ngForm">
-        <div id="user-data">
+        <div id="user-data" ngModelGroup="user-data" #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input
@@ -28,6 +28,7 @@
             <span class="help-block" *ngIf="email.invalid && email.touched">Please enter a valid email!</span>
           </div>
         </div>
+        <p *ngIf="userData.invalid && userData.touched">Enter correct user data.</p>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
           <select
@@ -38,6 +39,15 @@
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
+        </div>
+        <div class="form-group">
+          <textarea
+            class="form-control"
+            name="questionAnswer"
+            rows="3"
+            [(ngModel)]="answer">
+          </textarea>
+          <p>Your reply: {{ answer }}</p>
         </div>
         <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Submit</button>
       </form>
