--- a/app-forms-template/src/app/app.component.html
+++ b/app-forms-template/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form (ngSubmit)="onSubmit(form)" #form="ngForm">
-        <div id="user-data" ngModelGroup="user-data" #userData="ngModelGroup">
+        <div id="user-data" ngModelGroup="userData" #userData="ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input
@@ -13,7 +13,7 @@
               name="username"
               required>
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button class="btn btn-default" type="button" (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input
@@ -49,6 +49,18 @@
           </textarea>
           <p>Your reply: {{ answer }}</p>
         </div>
+        
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input
+              type="radio"
+              name="gender"
+              ngModel
+              [value]="gender" />
+            {{ gender }}
+          </label>
+        </div>
+        
         <button class="btn btn-primary" type="submit" [disabled]="form.invalid">Submit</button>
       </form>
     </div>
