TD: Custom Validators and Errors

--- a/app-forms-reactive/src/app/app.component.html
+++ b/app-forms-reactive/src/app/app.component.html
@@ -1,28 +1,69 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form>
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input
-            type="text"
-            id="username"
-            class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="email">email</label>
-          <input
-            type="text"
-            id="email"
-            class="form-control">
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <div [formGroup]="signupForm.get('userData')">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input
+              type="text"
+              id="username"
+              class="form-control"
+              formControlName="username">
+            <span
+              *ngIf="signupForm.get('userData.username').invalid && signupForm.get('userData.username').touched"
+              class="help-block">
+              
+              <span *ngIf="signupForm.get('userData.username').errors['required']">Please enter a username!</span>
+              <span *ngIf="signupForm.get('userData.username').errors['nameIsForbidden']">Please enter another username!</span>
+            
+          </span>
+          </div>
+          <div class="form-group">
+            <label for="email">email</label>
+            <input
+              type="text"
+              id="email"
+              class="form-control"
+              formControlName="email">
+            <span
+              *ngIf="signupForm.get('userData.email').invalid && signupForm.get('userData.email').touched"
+              class="help-block">
+              Please enter a valid email!
+            </span>
+          </div>
         </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
             <input
               type="radio"
-              [value]="gender">{{ gender }}
+              [value]="gender"
+              formControlName="gender">
+            {{ gender }}
           </label>
         </div>
+        
+        <div formArrayName="hobbies">
+          <div>
+            <h4>Your hobbies!</h4>
+            <button
+              class="btn btn-primary"
+              type="button"
+              (click)="onAddHobbies()">
+              Add Hobbies
+            </button>
+          </div>
+          <div>
+            <div class="form-group" *ngFor="let hobbyControl of signupForm.get('hobbies').controls; let i = index">
+              <input type="text" class="form-control" [formControlName]="i">
+            </div>
+          </div>
+        </div>
+        <span
+          *ngIf="signupForm.invalid && signupForm.touched"
+          class="help-block">
+            Please enter a valid data!
+          </span>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
