--- a/app-pipes/src/app/app.component.html
+++ b/app-pipes/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <input class="form-control" [(ngModel)]="filteredStatus" />
       <ul class="list-group">
         <li
           class="list-group-item"
@@ -10,7 +11,9 @@
             class="badge">
             {{ server.status }}
           </span>
-          <strong>{{ server.name }}</strong> | {{ server.instanceType }} | {{ server.started }}
+          <strong>{{ server.name | shorten : 5 }}</strong> |
+          {{ server.instanceType | uppercase }} |
+          {{ server.started | date: 'fullDate' | uppercase }}
         </li>
       </ul>
     </div>
