--- a/app-pipes/src/app/app.component.html
+++ b/app-pipes/src/app/app.component.html
@@ -2,10 +2,15 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <input class="form-control" [(ngModel)]="filteredStatus" />
+      <hr />
+      <button class="btn btn-primary" (click)="onAddServer()">Add Server</button>
+      <hr />
+      App Status: {{ appStatus | async }}
+      <hr />
       <ul class="list-group">
         <li
           class="list-group-item"
-          *ngFor="let server of servers"
+          *ngFor="let server of servers | filter : filteredStatus : 'status'"
           [ngClass]="getStatusClasses(server)">
           <span
             class="badge">
